<resources>
    <string name="app_name">Arsip Surat</string>
    <string name="title_home">Home</string>
    <string name="surat_masuk">Surat Masuk</string>
    <string name="surat_keluar">Surat Keluar</string>
    <string name="profile">Profile</string>
    <string name="cari_surat_masuk">Cari Surat Masuk</string>
    <string name="cari_surat_keluar">Cari Surat Keluar</string>
    <string name="asal_surat">Surat Dari</string>
    <string name="tujuan_surat">Tujuan Surat</string>
    <string name="tgl_surat">Tanggal Surat</string>
    <string name="search">Search</string>
    <string name="perihal">Perihal</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tgl_penerimaan">Tanggal Penerimaan</string>
    <string name="tgl_catat">Tanggal Catat</string>
    <string name="tanggal_surat">Tanggal Surat</string>
    <string name="no_surat">Nomor Surat</string>
    <string name="keterangan">Keterangan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Deskripsi</string>
    <string name="tab_text_2">Surat</string>
    <string name="tab_text_3">Lampiran</string>
    <string name="submit">SUBMIT</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="shared_preferences_name" translatable="false">default_shared_preferences</string>
    <string name="shared_preferences_name_keluar" translatable="false">default_shared_preferences_keluar</string>
    <string name="shared_preferences_name_login" translatable="false">default_shared_preferences_login</string>
    <string name="shared_preferences_disposisi" translatable="false">default_shared_preferences_disposisi</string>
    <string name="user_information">User Information</string>
    <string name="no_hp">No Hp</string>
    <string name="bidang_pekerjaan">Bidang Pekerjaan</string>
    <string name="logout">LOGOUT</string>
    <string name="surat">Surat</string>
    <string name="lampiran">Lampiran</string>
    <string name="kategori_surat">Jenis Surat</string>
    <string name="error">Tidak Boleh Kosong</string>
    <string name="e_arsip_surat">E-ARSIP SURAT</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="disposisi">DISPOSISI</string>
    <string name="buat_disposisi">BUAT DISPOSISI</string>
    <string name="lihat_disposisi">LIHAT DISPOSISI</string>

    <string name="klasifikasi">KLASIFIKASI :</string>
    <string name="klasifikasi2">Klasifikasi</string>
    <string name="derajat">DERAJAT :</string>
    <string name="derajat2">Derajat</string>
    <string name="nomor_agenda">Nomor Agenda</string>
    <string name="isi_disposisi">Isi Disposisi</string>
    <string name="diteruskan_kepada">Diteruskan Kepada</string>

    <string name="waka">WAKA</string>
    <string name="kanit_lantas">KANIT LANTAS</string>
    <string name="kasi_umum">KASI UMUM</string>
    <string name="kanit_reskrim">KANIT RESKRIM</string>
    <string name="kanit_propam">KANIT PROPAM</string>
    <string name="kasi_humas">KASI HUMAS</string>
    <string name="kanit_samapta">KANIT SAMAPTA</string>
    <string name="kanit_spktI">KANIT SPKT I</string>
    <string name="kasi_hukum">KASI HUKUM</string>
    <string name="kanit_intelkam">KANIT INTELKAM</string>
    <string name="kanit_spktII">KANIT SPKT II</string>
    <string name="kanit_binmas">KANIT BINMAS</string>
    <string name="kanit_spktIII">KANIT SPKT III</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="level">Level</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="register">Register</string>
    <string name="daftar">DAFTAR</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="tap_to_select_image">Tap to Select Image</string>
    <string name="deskripsi">DESKRIPSI</string>
    <string name="edit_disposisi">UBAH DISPOSISI</string>
    <string name="visi">VISI</string>

    <string-array name="photo">
        <item>@drawable/poster_polsek_1</item>
        <item>@drawable/poster_polsek_2</item>
        <item>@drawable/poster_polsek_3</item>
        <item>@drawable/poster_polsek_4</item>
        <item>@drawable/poster_polsek_5</item>
    </string-array>

    <string-array name="data_name">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="visi_text">
       Terwujudnya insan Polri yang profesional, bermoral, bersih dan terpercaya dalam penegakan hukum serta sebagai Pelindung Pengayom Pelayan masyarakat yang mampu memberikan rasa aman, tentram dan dipercaya.
    </string>
    <string name="misi">MISI</string>
    <string name="misi_text">
        "Memberikan  perlindungan, pengayoman dan pelayanan secara mudah, tanggap / responsif dan tidak diskriminatif agar masyarakat bebas dari segala bentuk gangguan fisik dan psikis.\n\n"

        Memelihara keamanan dan ketertiban masyarakat dengan tetap memperhatikan norma-norma dan nilai-nilai yang berlaku dalam bingkai integritas wilayah hukum Negara Kesatuan Republik Indonesia.\n\n

        Mengembangkan Perpolisian Masyarakat (Community Policing ) yang berbasis pada masyarakat patuh hukum ( Law Abiding Citizen ).\n\n

        Menegakkan hukum secara profesional, objektif, proposional, transparan dan akuntabel untuk menjamin kepastian hukum dan rasa keadilan.\n\n

        Mengelola secara profesional, transparan, akuntabel dan modern seluruh sumber daya Polri guna mendukung operasional tugas.\n\n

        Meningkatkan kesadaran hukum dan kesadaran berbangsa dari masyarakat yang ber bhineka tunggal ika.
    </string>
    <string name="alamat_text">
        Jl. Perintis Kemerdekaan No.2,
        Klumpang Kb., Kec. Hamparan Perak, Kabupaten Deli Serdang,
        Sumatera Utara 20374
    </string>
    <string name="alamat">Alamat</string>
    <string name="telepon">Telepon</string>
    <string name="telepon_text">(061) 80801279</string>
    <string name="provinsi">Provinsi</string>
    <string name="provinsi_text">Sumatera Utara</string>
    <string name="lokasi_file">Lokasi File</string>
</resources>