<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_surat_masuk"
        android:icon="@drawable/ic_surat_masuk_black"
        android:title="@string/masuk" />

    <item
        android:id="@+id/navigation_surat_keluar"
        android:icon="@drawable/ic_surat_keluar_black"
        android:title="@string/keluar" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black"
        android:title="@string/profile"
        />
    <item
        android:id="@+id/navigation_register"
        android:icon="@drawable/baseline_person_add_24"
        android:title="@string/register"/>

</menu>