<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true"
    tools:context=".ui.detail.surat_masuk.disposisi.AddDisposisiActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField_klasifikasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/klasifikasi2"
            android:layout_marginBottom="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_klasifikasi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/klasifikasi2"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldDerajat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/derajat2"
            android:layout_marginBottom="8dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_derajat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                android:text="@string/derajat2"/>
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/edt_nomor_agenda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nomor_agenda"
                android:inputType="textCapSentences"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_isi_disposisi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:lines="5"
                android:maxLines="10"
                android:scrollbars="vertical"
                android:hint="@string/isi_disposisi"
                android:padding="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"
            android:text="@string/diteruskan_kepada" />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/checkBox_waka"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/waka"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox_kanit_reskrim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/kanit_reskrim"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_waka"/>
            <CheckBox
                android:id="@+id/checkBox_kanit_samapta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/kanit_samapta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_reskrim"/>
            <CheckBox
                android:id="@+id/checkBox_kanit_intelkam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/kanit_intelkam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_samapta"/>
            <CheckBox
                android:id="@+id/checkBox_kanit_binmas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/kanit_binmas"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_intelkam"/>
            <CheckBox
                android:id="@+id/checkBox_kasi_umum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/kasi_umum"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_binmas"/>

            <CheckBox
                android:id="@+id/checkBox_kasi_hukum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kasi_hukum"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kasi_umum" />


            <CheckBox
                android:id="@+id/checkBox_kanit_lantas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"

                android:text="@string/kanit_lantas"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/checkBox_kanit_propam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kanit_propam"
                app:layout_constraintStart_toStartOf="@+id/checkBox_kanit_lantas"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_lantas" />
            <CheckBox
                android:id="@+id/checkBox_kanit_spktI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kanit_spktI"
                app:layout_constraintStart_toStartOf="@+id/checkBox_kanit_propam"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_propam" />
            <CheckBox
                android:id="@+id/checkBox_kanit_spktII"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kanit_spktII"
                app:layout_constraintStart_toStartOf="@+id/checkBox_kanit_spktI"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_spktI" />
            <CheckBox
                android:id="@+id/checkBox_kanit_spktIII"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kanit_spktIII"
                app:layout_constraintStart_toStartOf="@+id/checkBox_kanit_spktII"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_spktII" />
            <CheckBox
                android:id="@+id/checkBox_kasi_humas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kasi_humas"
                app:layout_constraintStart_toStartOf="@+id/checkBox_kanit_spktIII"
                app:layout_constraintTop_toBottomOf="@+id/checkBox_kanit_spktIII" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>