<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.arsipsurat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_surat_masuk"
        android:name="com.example.arsipsurat.ui.surat_masuk.SuratMasukFragment"
        android:label="@string/surat_masuk"
        tools:layout="@layout/fragment_surat_masuk" />

    <fragment
        android:id="@+id/navigation_surat_keluar"
        android:name="com.example.arsipsurat.ui.surat_keluar.SuratKeluarFragment"
        android:label="@string/surat_keluar"
        tools:layout="@layout/fragment_surat_keluar" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.arsipsurat.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.arsipsurat.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" />

</navigation>